--- a/src/ui/internal-audit/src/app/views/private/branch-audit/audit-schedule/audit-schedule.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/audit-schedule/audit-schedule.component.html
@@ -51,8 +51,8 @@
                       <td>{{ auditSchedule.auditor }}</td>
                       <td>{{ auditSchedule.scheduleStartDate | date:'medium' }}</td>
                       <td>{{ auditSchedule.scheduleEndDate | date:'medium' }}</td>
-                      <td>{{ auditSchedule.executionStatus }}</td>
-                      <td>{{ auditSchedule.scheduleState == 0 ? "Not Started" :auditSchedule.scheduleState == 1 ? "Inprogress": auditSchedule.scheduleState == 3?"Done":""}}</td>
+                      <td>{{ auditSchedule.executionState == 0 ? "Not Started" : auditSchedule.executionState == 2 ? "Inprogress":  auditSchedule.executionState == 3?"Done":""}}</td>
+                      <td>{{ auditSchedule.scheduleState == 0 ? "Pending" :auditSchedule.scheduleState == 1 ? "Approved": auditSchedule.scheduleState == 3?"Done":""}}</td>
                       <td>{{ auditSchedule.createdOn | date:'medium' }}</td>
                       <td>
                         <div class="btn-group" role="group" aria-label="Basic example">
@@ -167,9 +167,9 @@
         <div cFormFloating *ngIf="formService.isEdit(this.auditScheduleCreateForm.get('id'))">
           <select aria-label="Floating label select example" cSelect id="executionStatusId" formControlName="executionStatusId" name="executionStatusId" >
             <option value=null>Execution Status</option>
-            <option value=0>Not Started</option>
-            <option value=1>In Progress</option>
-            <option value=2>Done</option>
+            <option value=-1>Not Started</option>
+            <option value=2>In Progress</option>
+            <option value=3>Done</option>
           </select>
           <label for="executionStatusId" class="dropdownLabel">Execution Status</label>
         </div>         
