--- a/src/ui/internal-audit/src/app/views/private/branch-audit/audit-schedule/audit-schedule.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/audit-schedule/audit-schedule.component.html
@@ -166,7 +166,7 @@
         <br>
         <div cFormFloating *ngIf="formService.isEdit(this.auditScheduleCreateForm.get('id'))">
           <select aria-label="Floating label select example" cSelect id="executionStatusId" formControlName="executionStatusId" name="executionStatusId" >
-            <option value=null>Execution Status</option>
+            <option value=null>Select Execution Status</option>
             <option value=-1>Not Started</option>
             <option value=2>In Progress</option>
             <option value=3>Done</option>
