new issue action plan

--- a/src/ui/internal-audit/src/app/views/private/branch-audit/new-issue/new-issue.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/new-issue/new-issue.component.html
@@ -234,6 +234,9 @@
         </div>
       </div>
     </c-tab-pane>
+    <c-tab-pane class="p-3">
+      hello action
+    </c-tab-pane>
   </c-tab-content>
 </c-card>
 </c-col>
