--- a/src/ui/internal-audit/src/app/views/private/branch-audit/audit-frequency/audit-frequency.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/audit-frequency/audit-frequency.component.html
@@ -149,7 +149,7 @@
                   {{commonValueAndType.text}}
                 </option>
               </select>
-              <label for="ratingTypeId" >Rating</label>
+              <label for="ratingTypeId" >Audit Frequency</label>
             </div>
   
             <div cRow *ngIf="((auditFrequencyForm.get('auditFrequencyTypeId')?.invalid && auditFrequencyForm.get('auditFrequencyTypeId')?.errors)) &&
