--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/average-tab/average-tab.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/average-tab/average-tab.component.html
@@ -45,7 +45,7 @@
             <br>
             <!-- <button class="btn btn-success text-end" (click)="onConsolidate()"> Consolidate Score </button> -->
             <div class="row overflow-auto">
-                <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-bordered row-border datatableStyle hover" visibility="false">
+                <table datatable [dtOptions]="dtOptions" width="100%" [dtTrigger]="dtTrigger" class="table table-bordered row-border datatableStyle hover" visibility="false">
                     <thead>
                         <tr>
                             <th rowspan="2">SL No.</th>
