--- a/src/ui/internal-audit/src/app/views/private/branch-audit/audit-view/audit-view.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/audit-view/audit-view.component.html
@@ -14,7 +14,15 @@
                   </button> 
                 </div>
                 <div class="col-md-6">
-                  <div class="a row">
+                  <div class="a btn-group" role="group" aria-label="Basic example">
+                    <button  class="btnCreateColor"  cButton > Issue
+                    </button> 
+                    <button  class="btnCreateColor"  cButton > Report
+                    </button> 
+                    <button  class="btnCreateColor"  cButton (click)="RedirectToScheduleList()"> Schedule 
+                    </button> 
+                  </div>
+                  <!-- <div class="a row">
                     <div class="col-md-3">
                       <button  class="btnCreateColor"  cButton > Issue
                       </button> 
@@ -27,7 +35,7 @@
                       <button  class="btnCreateColor"  cButton (click)="RedirectToScheduleList()"> Schedule 
                       </button> 
                     </div>
-                  </div>
+                  </div> -->
                 </div>
                 
                
